# kafka-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain  rustfmt.toml  start.sh
account/: Cargo.toml  Rocket.toml
account/migrations/2018-07-19-132140_ch/: down.sql  up.sql
account/res/: account_creation_confirmed.avsc  account_creation_failed.avsc  balance.avsc  balance_changed.avsc  confirmed_account.avsc  confirmed_transaction.avsc  money_transfer_confirmed.avsc  money_transfer_failed.avsc
account/src/: kafka_consumer.rs  kafka_producer.rs  main.rs
account/src/db/: mod.rs  models.rs  schema.rs  util.rs
connector/: bank.sql  create-pg-source.sh  jdbc-sink.json  jdbc-source.json  setup.sh
transaction/: Cargo.toml  Rocket.toml
transaction/migrations/2018-07-19-132140_ch/: down.sql  up.sql
transaction/res/: account.avsc  avro.sh  cac.avsc  confirm_account_creation.avsc  confirm_money_transfer.avsc  transactions.avsc
transaction/src/: kafka_consumer.rs  kafka_producer.rs  main.rs
transaction/src/db/: mod.rs  models.rs  schema.rs  util.rs
