[package]
name = "transaction"
version = "0.1.0"
authors = ["gklijs <g.klijs@gmail.com>"]
edition = "2018"

[dependencies]
avro-rs = "^0.6.5"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono", "uuidv07", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
failure = "^0.1.5"
kafka = "0.8.0"
log = "0.4.8"
openssl = "0.10.26"
rand = "0.7.2"
r2d2 = "0.8.7"
uuid = { version = "0.8.1", features = ["v4"] }
schema_registry_converter = "1.1.0"
rocket = { version = "0.4.2", features = ["tls"], default-features = false }
rocket_contrib = "0.4.2"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
